--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,6 @@
 services:
   frontend:
-    build:
-      context: .
-      dockerfile: Dockerfile_frontend
-      target: frontend
+    image: emilyh0/quirknotes_frontend:latest
     ports:
     - "3000:80"
     depends_on:
